# bachelor-oppgave-nina

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  SQLite_Python.db  docker-compose.yml  mypy.ini  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml  commitlint.yml  constraints.txt  docker.yml
app/: __main__.py  common.py  dummy_script.py  executeProcess.py  execute_process.py  fileBrowser.py  formats.py  globals.py  logger.py  main.py  myApp.py  my_app.py  optionsWidgets.py  panels.py  progressBar.py  settings.py  tempCodeRunnerFile.py  timer.py
app/core/: __main__.py  core.py
app/data_manager/: data_manager.py  sqlite_tables.sql
app/detection/: __main__.py  batch_yolov5.py  batch_yolov8.py  detection.py  frame_grabber.py  main.py
app/report_manager/: __main__.py  main.py  report_manager.py
app/tests/: test_ui.py
app/vdi_perf_test/: __main__.py
app/video_processor/: __init__.py  __main__.py  main.py  video_processor.py
app/widgets/: detection_window.py  error_dialog.py  file_browser.py  options_widgets.py  widgets_options.py  widgets_panels.py
data/models/: v8m-classes-augmented.pt  v8s-640-binary.pt  v8s-640-classes-augmented-backgrounds.pt  v8s-640-classes-augmented-oreskyt.pt  v8s-640-classes-augmented.pt  v8s-640-classes.pt
datasets/brackish/: README.md  annotations_to_yolo.py  create_dataset.ipynb  create_dataset_split.py  create_dummy_yolo_annotations.py  create_image_list.py  frame_extractor.py
model_research/: brackish.yaml  data.yaml  nina.yaml  nina_new.yaml  train.py  yolov8.ipynb
tests/: test.py  test_placeholder.py  test_settings.py
tools/annotation_distribution/: find_annotation_distribution.py
tools/find_already_annotated_videos/: compare_hashes.py  find_overlapping_videos.py  format_output.py
tools/generate_dataset/: generate_dataset.py  validate_background_images.py
tools/remove_broken_annotations_and_images/: remove_broken_annotations_and_images_script.py
tools/validate_model_accuracy/: background_results  background_results_invalid  ground_truth_data.json  main.py
tools/validate_model_accuracy/old_files/: def_results  default_aug_results  oreskyt_results
