[tool.poetry]
name = "bachelor-oppgave-nina"
version = "0.1.0"
description = ""
authors = ["Benjamin Letnes Bjerken <benjabj@stud.ntnu.no>", "Daniel Hao Huynh <daniehhu@stud.ntnu.no>", "Lars Blütecher Holter <larsbho@stud.ntnu.no>", "Lillian Alice Wangerud <lilliaaw@stud.ntnu.no>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
PyQt6 = "^6.4.2"
pyqtdarktheme = "^2.1.0"
ultralytics = "^8.0.38"
yolov5 = "^7.0.9"
torch = [
  { url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp310-cp310-win_amd64.whl", markers = "platform_system == 'win32' or platform_system == 'Windows'", platform="windows"},
  { url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp310-cp310-linux_x86_64.whl", markers = "platform_system == 'Linux'", platform = "linux"}
]
torchvision = [
  { url = "https://download.pytorch.org/whl/cu117/torchvision-0.14.1%2Bcu117-cp310-cp310-win_amd64.whl", markers = "platform_system == 'win32' or platform_system == 'Windows'", platform="windows"},
  { url = "https://download.pytorch.org/whl/cu117/torchvision-0.14.1%2Bcu117-cp310-cp310-linux_x86_64.whl", markers = "platform_system == 'Linux'", platform = "linux"}
]
tqdm = "^4.64.1"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pylint = "^2.16.2"
black = "^23.1.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
